chore: Upgrade to Java 16